--- a/include/main.css
+++ b/include/main.css
@@ -6,7 +6,10 @@
     width: 100%;
     background-color: #fff;
     color: #00b1b1;
-    border: solid 1px #009393 !important; } }
+    border: solid 1px #009393 !important; }
+
+  .child {
+    margin-top: 30px; } }
 @media (min-width: 768px) {
   .doorstuur {
     background-color: #00b1b1;
@@ -20,7 +23,10 @@
     -webkit-border-radius: 0;
     -moz-border-radius: 0;
     -ms-border-radius: 0;
-    border-radius: 0; } }
+    border-radius: 0; }
+
+  .child {
+    margin-top: 100px; } }
 .zonder-radius {
   -webkit-border-radius: 0px;
   -moz-border-radius: 0px;
@@ -234,5 +240,50 @@ fieldset[disabled] .btn-primary.focus {
   -moz-border-radius: 0;
   -ms-border-radius: 0;
   border-radius: 0; }
+
+.content .background {
+  background-image: url(image);
+  background-position: 0 0;
+  background-repeat: repeat-x;
+  -webkit-animation: animateHeroBg 40s linear infinite;
+  animation: animateHeroBg 40s linear infinite; }
+
+h2 {
+  color: white;
+  font-family: monospace;
+  text-shadow: 1px 2px 3px rgba(0, 0, 0, 0.3); }
+
+video {
+  display: block; }
+
+video#bgvid {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  min-width: 100%;
+  min-height: 100%;
+  width: auto;
+  height: auto;
+  z-index: -100;
+  -webkit-transform: translateX(-50%) translateY(-50%);
+  transform: translateX(-50%) translateY(-50%);
+  background: url(MVI_5565.webm) no-repeat;
+  background-size: cover; }
+
+@media screen and (max-device-width: 800px) {
+  html {
+    background: url(MVI_5565.webm) #000 no-repeat center center fixed; }
+
+  #bgvid {
+    display: none; } }
+.selection {
+  background-image: url(IMG_6454.jpg);
+  background-position: 0 0;
+  background-repeat: repeat-x;
+  -webkit-animation: animateHeroBg 40s linear infinite;
+  animation: animateHeroBg 40s linear infinite; }
+
+.parent {
+  position: relative; }
 
 /*# sourceMappingURL=main.css.map */
