--- a/include/main.scss
+++ b/include/main.scss
@@ -12,6 +12,13 @@ $base_color_hover: #009393;
 .breed{
     width: 100%;
 }
+.down-menu {
+    position:fixed;
+    bottom:0;
+    left: 0;
+    padding: 10px;
+}
+
 @media (max-width:768px) {
     .doorstuur {
         float: right;
