--- a/include/main.css
+++ b/include/main.css
@@ -7,9 +7,14 @@
   left: 0;
   padding: 10px; }
 
+.menu-button:hover {
+  background-color: #00b1b1; }
+
 @media (max-width: 768px) {
   .doorstuur {
     float: right;
+    padding-top: 20px;
+    padding-bottom: 20px;
     width: 30%;
     background-color: #00b1b1;
     color: #fff; }
@@ -17,6 +22,8 @@
   .doorstuur:hover {
     float: right;
     width: 30%;
+    padding-top: 20px;
+    padding-bottom: 20px;
     background-color: #009393;
     color: #fff; }
 
@@ -30,8 +37,22 @@
     margin-top: -60px; }
 
   .row-onder {
-    margin-bottom: 15px; } }
+    margin-bottom: 15px; }
+
+  .leftspad {
+    padding-left: 0px;
+    padding-right: 0px; }
+
+  .rightpad {
+    padding-left: 0px;
+    padding-right: 0px; } }
 @media (min-width: 768px) {
+  .leftspad {
+    padding-left: 0px; }
+
+  .rightpad {
+    padding-right: 0px; }
+
   .doorstuur {
     background-color: #00b1b1;
     margin-top: -25px;
@@ -39,7 +60,9 @@
     margin-bottom: -30px;
     padding-left: 15px;
     padding-right: 15px;
+    padding-top: 42px;
     float: right;
+    vertical-align: middle;
     min-height: 94px;
     -webkit-border-radius: 0;
     -moz-border-radius: 0;
@@ -142,7 +165,7 @@ select {
   border-radius: 0;
   height: 2.3125rem; }
 
-input[type="button"], input[type="submit"], input[type="reset"], input[type="file"]::-webkit-file-upload-button, button {
+input[type="button"], input[type="submit"], input[type="reset"], input[type="file"]::-webkit-file-upload-button, button, button {
   align-items: flex-start;
   text-align: center;
   cursor: default;
@@ -320,5 +343,13 @@ video#bgvid {
 
 .parent {
   position: relative; }
+
+.leftspad > #hippeDiv > #alleen {
+  background-color: #00b1b1 !important;
+  color: #fff; }
+
+.rightpad > #hippeDiv > #alleen {
+  background-color: #00b1b1 !important;
+  color: #fff; }
 
 /*# sourceMappingURL=main.css.map */
