--- a/include/css/nav_css.scss
+++ b/include/css/nav_css.scss
@@ -1,22 +1,10 @@
-body{
-  
-  @media (min-width: 45em) {
-    font-size: 120%
-  }
-  @media (min-width: 65em) {
-    font-size: 130%
-  }
-  @media (min-width: 85em) {
-    font-size: 150%
-  }
-}
+
 a{
  text-decoration:none 
 }  
 header {
   position: fixed;
   width: 100%;
-  background: rgba(0,0,0,0.8);
   display: block;
   top: 0;
   padding: 0;
@@ -113,10 +101,12 @@ header {
 
 #toggle {
   height: 3em;
-  z-index: 999;
-  padding: 1.5em 1em 0;
-  cursor: pointer;
-  position: fixed;
+z-index: 999;
+padding: 1.5em;
+padding-bottom: 2.2em;
+cursor: pointer;
+background-color: #00b1b1;
+position: fixed;
   top: 0;
   right: .5em;
   -webkit-transition: padding-top 0.6s cubic-bezier(0.1, 0.01, 0.3, 1);
