--- a/include/main.css
+++ b/include/main.css
@@ -6,6 +6,19 @@
   bottom: 0;
   left: 0;
   padding: 10px; }
+  
+.primary-color {
+	color:#00b1b1;
+}
+
+.to-right {
+	float:right
+}
+
+.arrow {
+	margin-top:4px;
+	margin-right:7px;
+}
 
 .menu-button:hover {
   background-color: #00b1b1; }
@@ -28,7 +41,7 @@
     color: #fff; }
 
   .child {
-    margin-top: 30px; }
+    margin-top: 70px; }
 
   .row-weg {
     margin-top: -30px; }
@@ -351,5 +364,7 @@ video#bgvid {
 .rightpad > #hippeDiv > #alleen {
   background-color: #00b1b1 !important;
   color: #fff; }
+  
+
 
 /*# sourceMappingURL=main.css.map */
