API / Maps big update
Made a beginning on the API
Changed the location source to leaflet and removed google.
Updated the details page design

--- a/include/main.css
+++ b/include/main.css
@@ -1,6 +1,14 @@
 .breed {
   width: 100%; }
 
+@font-face {
+    font-family: schuurricon;
+    src: url(fonts/schuurricon.woff);
+}
+.iconfont {
+    font-family: schuurricon;
+}
+
 .down-menu {
   position: fixed;
   bottom: 0;
@@ -366,5 +374,8 @@ video#bgvid {
   color: #fff; }
   
 
+.basis {
+    color: #00b1b1;
+}
 
 /*# sourceMappingURL=main.css.map */
