--- a/include/main.scss
+++ b/include/main.scss
@@ -12,6 +12,13 @@ $base_color_hover: #009393;
 .breed{
     width: 100%;
 }
+@font-face {
+    font-family: schuurricon;
+    src: url(fonts/schuurricon.woff);
+}
+.iconfont {
+    font-family: schuurricon;
+}
 .down-menu {
     position:fixed;
     bottom:0;
@@ -367,5 +374,9 @@ video#bgvid {
 
 .resultaat {
     font-size: 16px !important;
+}
+
+.basis {
+    color: $base_color;
 }
 
